--- a/style.css
+++ b/style.css
@@ -1,28 +1,76 @@
-
 * {
   font-family: 'Raleway', sans-serif;
 }
 
-
 /*trying to have header words BOLD with background image faded*/
-
-#headerImage {
-  position: relative;
-  background-image: url();
-  background-image: url(https://lafilmfatale.files.wordpress.com/2011/10/cropped-film_header2.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  opacity: 0.2;
-  text-align: right;
+.logo {
+  background-image: url("https://lafilmfatale.files.wordpress.com/2011/10/cropped-film_header2.jpg");
+  height:120px; 
   width: 100%;
-  height: 120px;
+  background-repeat: no-repeat;
+  border: none;
+  margin-bottom: 65px;
+  box-shadow: 0 0 8px 8px black inset;
 }
 
-#favMovieHeader {
-  color: teal;
-  text-align: center;
-  font-size: 55px;
-  font-weight: 800
-  margin-top: -1o0px;
-  
+#movieHeader {
+  color: darkgray;
+  position: relative;
+  text-align: right;
+  font-size: 30px;
+  font-weight: 800;
+  margin-top: -165px;
+  margin-bottom: 65px;
+  margin-right: 30px;
+  /*padding-left: 250px; */ 
 }
+
+section {
+  float: left;
+  width: 55%;
+  margin-left: 10px;
+}
+
+button#love {
+  background-color: #ef6eeb;
+  font-size: 15px;
+  border-radius: 8px;
+}
+
+button#hate {
+  background-color: #52aebf;
+  font-size: 15px;
+  border-radius: 8px;
+}
+
+aside {
+  float: right;
+  width: 25%;
+  margin-top: 30px;
+  /*padding-right: 10px*/
+}
+
+div.clearfix {
+  clear: both;
+}
+
+.container {
+  width: 1000px;
+  margin: auto;
+}
+
+.footerLinks { 
+  display: block;
+  margin-top: 10px;
+  background-color: black;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+/* mouse over link */
+a:hover {
+    font-size: 18px;
+    font-weight: bolder;
+}
+
+
